included img in snake class and updated img/made snake img attribute

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <center>
         <h3 class="display-8">HighScore: <b id="score"></b></h3>
     </center>
-    <center <div class="jumbotron">
+    <center> <div class="jumbotron">
         <h1 class="display-4">Meroni's Snake Game</h1>
 
         <div class="button-bar">
